// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with  multiple Expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $234,252.35
  </h1>
</div>
`;

exports[`should render ExpenseSummary with 1 Expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense 
     totalling 
    $2.35
  </h1>
</div>
`;
